# esphome-mcp

./: .gitignore  README.md  hacs.json  pyproject.toml  renovate.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_behavior.yml  documentation.yml  feature_request.yml  runtime_bug.yml  startup_bug.yml
.github/workflows/: dependabot-auto-merge.yml.disabled  e2e-component.yml  pr.yml  release-notes.yml  release.yml  renovate.yml  validate.yml
custom_components/esphome_mcp/: __init__.py  addon_tools.py  config_flow.py  const.py  embedded_entry.py  embedded_server.py  embedded_setup.py  hacs.json  manifest.json  mcp_webhook.py  server.py  strings.json  ui_panel.py
custom_components/esphome_mcp/translations/: en.json
scripts/: check_runtime_dependency_sandbox.py  check_version_bump.py  redact_diagnostics_secrets.py  release_notes.py  validate_release_metadata.py
tests/: conftest.py
tests/haos_image_build/: README.md  __init__.py  build_image.py  requirements.txt
tests/initial_test_state/: README.md  automations.yaml  configuration.yaml  home-assistant_v2.db  scenes.yaml
tests/initial_test_state/.storage/: auth  backup  core.config_entries  core.device_registry
tests/initial_test_state/themes/: test_theme_a.yaml  test_theme_b.yaml
tests/src/: haos_runtime.py
tests/src/e2e/haos_only/: __init__.py  test_embedded_server_haos.py
tests/src/e2e/host_device/: __init__.py  test_esphome_host_device.py
tests/src/e2e/utilities/: __init__.py  esphome_host.py  streamable_http.py
tests/src/e2e/workflows/embedded/: test_component_scaffold.py
tests/src/unit/: test_addon_tools.py  test_embedded_server_dependencies.py  test_haos_e2e_harness.py  test_ingress_connect_urls.py  test_metadata.py  test_release_notes.py  test_runtime_dependency_sandbox.py  test_server_tools.py
