[project]
name = "esphome-mcp-custom-component"
version = "0.1.0"
description = "ESPHome MCP server as a Home Assistant custom component"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "ruff>=0.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
