[project]
name = "esphome-mcp-custom-component"
version = "0.1.0"
description = "ESPHome MCP server as a Home Assistant custom component"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = [
    "aiohttp>=3.9",
    "pytest>=8.4",
    "pytest-timeout>=2.4",
    "requests>=2.32",
    "ruff>=0.13",
    "websockets>=15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests",
    "haos_only: tests that require a HAOS qcow2 and QEMU/KVM",
    "slow: long-running integration tests",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["tests/initial_test_state"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
